--- a/landing.html
+++ b/landing.html
@@ -9,34 +9,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="row landing">
-        <div class="col-md-9 col-sm-12">
-            <div class="logo">
-                <div class="heading">
-                    <h1>RedPositive Services</h1>
-                </div>
-                <div class="tagline">
-                    <h4>Join a meeting, host a meeting...</h4>
-                </div>
-                <div class="pricing">
-                    <div class="row">
-                        <div class="col-sm-5 text-right">
-                            <h5><a class="pricelink" href="#">PRICING</a></h5>
-                        </div>
-                        <div class="col-sm-7 text-left">
-                            <h5>&copy; RedPositive Services Pvt. Ltd.</h5>
-                        </div>
+    <div class="landing">
+        <div class="row">
+            <div class="col-md-9 col-sm-12">
+                <div class="logo">
+                    <div class="heading">
+                        <h1>RedPositive Services</h1>
+                    </div>
+                    <div class="tagline">
+                        <h4>Join a meeting, host a meeting...</h4>
                     </div>
                 </div>
             </div>
+            <div class="col-md-3 col-sm-12">
+                <div class="list">
+                    <ul class="landingoptions">
+                        <li><a href="#">SignIn</a></li>
+                        <li><a href="signup.html">SignUp, it's Free</a></li>
+                        <li><a href="#">About RedPositive</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="col-md-3 col-sm-12">
-            <div class="list">
-                <ul class="landingoptions">
-                    <li><a href="#">SignIn</a></li>
-                    <li><a href="signup.html">SignUp, it's Free</a></li>
-                    <li><a href="#">About RedPositive</a></li>
-                </ul>
+        <div class="pricing">
+            <div class="row">
+                <div class="col-sm-3 text-center">
+                    <h5><a class="pricelink" href="#">PRICING</a></h5>
+                </div>
+                <div class="col-sm-9 text-center">
+                    <h5>&copy; RedPositive Services Pvt. Ltd.</h5>
+                </div>
             </div>
         </div>
     </div>
