corrected landing page

--- a/landing.html
+++ b/landing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing</title>
+    <title>Welcome | RedPositive Services Pvt. Ltd.</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -24,7 +24,7 @@
             <div class="col-md-3 col-sm-12">
                 <div class="list">
                     <ul class="landingoptions">
-                        <li><a href="#">SignIn</a></li>
+                        <li><a href="signin.html">SignIn</a></li>
                         <li><a href="signup.html">SignUp, it's Free</a></li>
                         <li><a href="#">About RedPositive</a></li>
                     </ul>
