Corrected  close button

--- a/webinar.html
+++ b/webinar.html
@@ -16,7 +16,7 @@
                 <div class="mainvideowebinar text-center">
                     <video id="mainvideo" src="test.mp4" muted></video>
                 </div>
-                <a title="Leave Webinar" class="out" href="meeting.html"><i class="fa fa-close"></i></a>
+                <a title="Leave Webinar" class="out" href="home.html"><i class="fa fa-close"></i></a>
             </div>
             <div class="col-lg-3 col-md-12 order-lg-1">
                 <div id="collapse-live" class="chatheading text-center">
