--- a/meeting.html
+++ b/meeting.html
@@ -16,7 +16,7 @@
                 <div class="mainvideo text-center">
                     <video id="mainvideo" src="test.mp4" muted></video>
                 </div>
-                <a title="Leave Meeting" class="out" href="meeting.html"><i class="fa fa-sign-out"></i></a>
+                <a title="Leave Meeting" class="out" href="home.html"><i class="fa fa-close"></i></a>
                 <button class="share"><i class="fa fa-share-alt-square"></i></button>
                 <div class="video-row">
                     <div class="video-column">
