Chat username colour

--- a/meeting.html
+++ b/meeting.html
@@ -41,7 +41,7 @@
                 <div id="chat" class="chat">
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
@@ -51,7 +51,7 @@
                     </div>
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
@@ -61,7 +61,7 @@
                     </div>
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
