--- a/webinar.html
+++ b/webinar.html
@@ -26,7 +26,7 @@
                 <div id="chat" class="chat">
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
@@ -36,7 +36,7 @@
                     </div>
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
@@ -46,7 +46,7 @@
                     </div>
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
@@ -56,7 +56,7 @@
                     </div>
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
@@ -86,7 +86,7 @@
                     </div>
                     <div class="chatmessage">
                         <div class="row">
-                            <div class="col-sm-6 text-left"><h5><b>Username</b></h5></div>
+                            <div class="col-sm-6 text-left username"><h5><b>Username</b></h5></div>
                             <div class="col-sm-6 text-right"><h6>15:30</h6></div>
                         </div>
                         <hr>
