--- a/landing.html
+++ b/landing.html
@@ -37,7 +37,7 @@
                     <h5><a class="pricelink" href="#">PRICING</a></h5>
                 </div>
                 <div class="col-sm-9 text-center">
-                    <h5>&copy; RedPositive Services Pvt. Ltd.</h5>
+                    <h5 class="have">&copy; RedPositive Services Pvt. Ltd.</h5>
                 </div>
             </div>
         </div>
