--- a/signin.html
+++ b/signin.html
@@ -30,7 +30,7 @@
                         <button class="button button-login btn-block">Login</button>
                     </div>
                     <div class="text-center">
-                        <h5>New User? <a class="green" href="signup.html">Sign Up</a></h5>
+                        <h5 class="have">New User? <a class="green" href="signup.html">Sign Up</a></h5>
                     </div>
                     <div class="text-center top">
                         <h6><a class="red" href="/forgot">Forgot Password?</a></h6>
