--- a/signup.html
+++ b/signup.html
@@ -44,7 +44,7 @@
                         <button class="button button-submit btn-block">Sign Up</button>
                     </div>
                     <div class="text-center">
-                        <h5>Have an account? <a class="red" href="signin.html">Sign In</a></h5>
+                        <h5 class="have">Have an account? <a class="red" href="signin.html">Sign In</a></h5>
                     </div>
                 </form>
             </div>
