--- a/home.html
+++ b/home.html
@@ -37,20 +37,20 @@
 
         <div class="container">
             <div class="row">
-                <a href="meetingforms.html" class="col-sm-12 col-md-5 meetingcolumn">
+                <a href="meetingforms.html" id="changeActivate" class="col-sm-12 col-md-5 meetingcolumn">
                     <div>
                         <div class="formheading text-center">
-                            <h1>Meetings</h1>
+                            <h1 id="changecolor">Meetings</h1>
                         </div>
                         <hr class="styledhr">
                         <div class="text-center meetingimgholder">
                             <img class="meetingimg" src="meetingimg.jpg" alt="Meetings image">
                         </div>
                         <div class="meetingsdesc text-center">
-                            <h5><i>Got a meeting to attend?</i></h5>
-                            <h5><i>Or are you the host?</i></h5>
+                            <h5 id="changecolor"><i>Got a meeting to attend?</i></h5>
+                            <h5 id="changecolor"><i>Or are you the host?</i></h5>
                             <hr class="styledhr">
-                            <h4>We've got you covered..</h4>
+                            <h4 id="changecolor">We've got you covered..</h4>
                         </div>
                     </div>
                 </a> 
