--- a/classroomforms.html
+++ b/classroomforms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webinar Forms | RedPositive Services Pvt. Ltd.</title>
+    <title>Classroom Forms | RedPositive Services Pvt. Ltd.</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -38,26 +38,26 @@
                 <a class="button-back" href="home.html"><i class="fa fa-arrow-left"></i></a>
             </div>
             <div class="row">
-                <div onmouseenter="createWebinarMessage()" class="col-sm-12 col-md-6 createmeetingcolumn">
+                <div onmouseenter="createMeetingMessage()" class="col-sm-12 col-md-6 createmeetingcolumn">
                     <div class="formheading text-center">
-                        <h1>Host a Webinar</h1>
+                        <h1>Create a Classroom</h1>
                     </div>
                     <div class="createmeetingformbox">
-                        <form action="webinar.html">
+                        <form action="classroom.html">
                             <div class="form-group">
-                                <label for="webinarName">Webinar Name</label>
-                                <input class="form-control" type="text" name="webinarName" placeholder="Enter webinar name.." required>
+                                <label for="classroomPurpose">Classroom Name</label>
+                                <input class="form-control" type="text" name="classroomPurpose" placeholder="Enter classroom name.." required>
                             </div>
                             <div class="form-group">
-                                <label for="webinarId">Webinar ID</label>
-                                <input class="form-control" type="text" name="webinarId" placeholder="Enter webinar ID.." required>
+                                <label for="classroomId">Classroom ID</label>
+                                <input class="form-control" type="text" name="classroomId" placeholder="Enter classroom ID.." required>
                             </div>
                             <div class="form-group">
-                                <label for="webinarCode">Code</label>
-                                <input class="form-control" type="password" name="webinarCode" placeholder="Enter webinar code.." required>
+                                <label for="classroomCode">Code</label>
+                                <input class="form-control" type="password" name="classroomCode" placeholder="Enter classroom code.." required>
                             </div>
                             <div class="form-group">
-                                <button class="button button-submit btn-block">Create Webinar</button>
+                                <button class="button button-submit btn-block">Create Classroom</button>
                             </div>
                         </form>
                     </div>
@@ -67,20 +67,20 @@
                 </div>
                 <div class="col-sm-12 col-md-6 joinmeetingcolumn">
                     <div class="formheading text-center">
-                        <h1>Join a Webinar</h1>
+                        <h1>Join a Classroom</h1>
                     </div>
                     <div class="joinmeetingformbox">
-                        <form action="webinar.html">
+                        <form action="classroom.html">
                             <div class="form-group">
-                                <label for="webinarId">Webinar ID</label>
-                                <input class="form-control" type="text" name="webinarId" placeholder="Enter webinar ID.." required>
+                                <label for="classroomId">Classroom ID</label>
+                                <input class="form-control" type="text" name="classroomId" placeholder="Enter classroom ID.." required>
                             </div>
                             <div class="form-group">
-                                <label for="webinarCode">Code</label>
-                                <input class="form-control" type="password" name="webinarCode" placeholder="Enter webinar code.." required>
+                                <label for="classroomCode">Code</label>
+                                <input class="form-control" type="password" name="classroomCode" placeholder="Enter classroom code.." required>
                             </div>
                             <div class="form-group">
-                                <button class="button button-warning btn-block">Join Webinar</button>
+                                <button class="button button-warning btn-block">Join Classroom</button>
                             </div>
                         </form>
                     </div>
