--- a/home.html
+++ b/home.html
@@ -15,10 +15,10 @@
         <nav class="navbar navbar-expand-lg navbar-light p-4">
             <div class="container">
                 <a class="navbar-brand" href="home.html">RedPositive</a>
+                <a class="navbar-brand smaller" href="account.html">Welcome, User</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-              
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                   <ul class="navbar-nav ml-auto mt-15 mt-lg-0">
                     <li class="nav-item active">
@@ -37,7 +37,24 @@
 
         <div class="container">
             <div class="row">
-                <a href="meetingforms.html" id="changeActivate" class="col-sm-12 col-md-5 meetingcolumn">
+                <a href="webinarforms.html" class="col-sm-12 col-md-4 webinarcolumn">
+                    <div>
+                        <div class="formheading text-center">
+                            <h1>Webinars</h1>
+                        </div>
+                        <hr class="styledhr">
+                        <div class="text-center meetingimgholder">
+                            <img class="meetingimg" src="webinarimg.jpg" alt="Webinars image">
+                        </div>
+                        <div class="webinarsdesc text-center">
+                            <h5><i>Urgent webinar?</i></h5>
+                            <h5><i>Hurry, don't miss out!</i></h5>
+                            <hr class="styledhr">
+                            <h4>All your webinars are in here..</h4>
+                        </div>
+                    </div>
+                </a>
+                <a href="meetingforms.html" id="changeActivate" class="col-sm-12 col-md-4 meetingcolumn">
                     <div>
                         <div class="formheading text-center">
                             <h1 id="changecolor">Meetings</h1>
@@ -54,20 +71,20 @@
                         </div>
                     </div>
                 </a> 
-                <a href="webinarforms.html" class="col-sm-12 col-md-5 offset-md-2 webinarcolumn">
+                <a href="classroomforms.html" class="col-sm-12 col-md-4 webinarcolumn">
                     <div>
                         <div class="formheading text-center">
-                            <h1>Webinars</h1>
+                            <h1>Classrooms</h1>
                         </div>
                         <hr class="styledhr">
                         <div class="text-center meetingimgholder">
-                            <img class="meetingimg" src="webinarimg.jpg" alt="Webinars image">
+                            <img class="meetingimg" src="classimg.jpg" alt="Classrooms image">
                         </div>
                         <div class="webinarsdesc text-center">
                             <h5><i>Are you a student?</i></h5>
                             <h5><i>Because, there's no age limit to learn.</i></h5>
                             <hr class="styledhr">
-                            <h4>All your Webinars are in here..</h4>
+                            <h4>Join a classroom here..</h4>
                         </div>
                     </div>
                 </a>
