--- a/signin.html
+++ b/signin.html
@@ -17,7 +17,7 @@
                 <h1>Login Here</h1>
             </div>
             <div class="loginformbox">
-                <form action="/login" method="post">
+                <form action="home.html">
                     <div class="form-group">
                         <label for="email">Email</label>
                         <input type="email" name="email" class="form-control" placeholder="Enter email.." required>
