--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
                 <h1>Create an account to proceed..</h1>
             </div>
             <div class="formbox">
-                <form action="/register" method="post">
+                <form action="signin.html">
                     <div class="form-group">
                         <label for="fname">First Name <span class="star">&#9733;</span></label>
                         <input id="fname" onchange="fnameValidation()" type="text" name="fname" class="form-control" placeholder="First name.." required>
