--- a/classroom.html
+++ b/classroom.html
@@ -16,8 +16,10 @@
                 <div class="mainvideo text-center">
                     <video id="mainvideo" src="test.mp4" muted></video>
                 </div>
-                <a title="Leave Meeting" class="out" href="classroomforms.html"><i class="fa fa-close"></i></a>
-                <button class="share"><i class="fa fa-share-alt-square"></i></button>
+                <a title="Leave Classroom" class="out" href="classroomforms.html"><i class="fa fa-close"></i></a>
+                <button title="Share Screen" class="share"><i class="fa fa-share-alt-square"></i></button>
+                <a title="Upload Assignment" class="upload" href="upload.html"><i class="fa fa-upload"></i></a>
+                <a title="Exam Mode" class="mode" href="examroom.html"><i class="fa fa-book"></i></a>
                 <div class="video-row">
                     <div class="video-column">
                         <video src="test.mp4" muted></video>
