--- a/UI/about.html
+++ b/UI/about.html
@@ -12,32 +12,12 @@
 </head>
 <body>
     <div class="homepage">
-        <nav class="navbar navbar-expand-lg navbar-light p-4">
-            <div class="container">
-                <a class="navbar-brand" href="home.html">RedPositive</a>
-                <a class="navbar-brand smaller" href="account.html">Welcome, User</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                  <ul class="navbar-nav ml-auto mt-15 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="pricing.html">Pricing</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="about.html">About Us</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="logout.html">Logout</a>
-                    </li>
-                  </ul>
-                </div>
-            </div>
-        </nav>
-
         <div class="container">
             <div class="text-left back">
                 <a class="button-back" href="home.html"><i class="fa fa-arrow-left"></i></a>
+            </div>
+            <div class="formheading text-center">
+                <h1>About Us</h1>
             </div>
             <div class="row">
                 <div class="col-sm-12 col-md-6">
