--- a/UI/about.html
+++ b/UI/about.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="homepage">
-        <div class="container">
+    <div class="aboutpage">
+        <div class="container mt-20">
             <div class="text-left back">
                 <a class="button-back" href="home.html"><i class="fa fa-arrow-left"></i></a>
             </div>
