--- a/UI/landing.html
+++ b/UI/landing.html
@@ -26,7 +26,7 @@
                     <ul class="landingoptions">
                         <li><a href="signin.html">SignIn</a></li>
                         <li><a href="signup.html">SignUp, it's Free</a></li>
-                        <li><a href="#">About RedPositive</a></li>
+                        <li><a href="about.html">About RedPositive</a></li>
                     </ul>
                 </div>
             </div>
